fix and clean horizontal scroll

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -60,6 +60,7 @@ html {
   width: 50px;
   pointer-events: none;
   z-index: 2;
+  height: 100vh;
 }
 
 .scrollable-container::before {
